@@ -1,6 +1,9 @@
 package by.test.services;
 
+import java.math.BigInteger;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 
 import org.springframework.stereotype.Service;
@@ -9,47 +12,81 @@ import ru.blogic.test.storage.Manager;
 import ru.blogic.test.storage.Storage;
 import ru.blogic.test.storage.Storage.Dictionary;
 import ru.blogic.test.storage.Storage.Dictionary.Record;
+import ru.blogic.test.storage.Storage.Dictionary.RecordAttr;
 import by.test.webservices.VocabloryRecord;
 
 @Service
 public class RecordServiceImpl implements RecordService {
 
 	@Override
-	public List<String> getAllVocablories() {
-		ArrayList<String> volabloryNames = new ArrayList<String>();
-		volabloryNames.add("Dict11");
-		volabloryNames.add("Dict12");
-		return volabloryNames;
+	public List<String> getAllVocabloryNames() throws Exception {
+		Storage storage = Manager.getInstance().getStorage();
+		return storage.getDictionariesNames();
 	}
 
 	@Override
-	public Long getNumberOfRecords() {
-		return new Long(12345);
+	public String getNumberOfRecords() throws Exception {
+		Storage storage = Manager.getInstance().getStorage();
+
+		BigInteger count = BigInteger.valueOf(0);
+		List<String> allVocNameList = getAllVocabloryNames();
+		for (String vocName : allVocNameList) {
+			Dictionary dictionary = storage.getDictionary(vocName);
+			int dictCount = dictionary.getRecordCount();
+			count = count.add(BigInteger.valueOf(dictCount));
+		}
+
+		return count.toString();
 	}
 
 	@Override
 	public boolean addRecordToVoc(String aVocName, Long aContent) {
+		Storage storage;
+		try {
+			storage = Manager.getInstance().getStorage();
+			Dictionary dictionary = storage.getDictionary(aVocName);
+			dictionary.addRecord(aContent.toString());
+		} catch (Exception e) {
+			e.printStackTrace();
+			return false;
+		}
 		return true;
 	}
 
 	@Override
-	public List<VocabloryRecord> searchRecordsLessThan(Long aLessThan)
-			throws Exception {
+	public List<VocabloryRecord> searchRecordsLessThan(Long aLessThan,
+			String aVocName) throws Exception {
 		Storage storage = Manager.getInstance().getStorage();
-		String aaa = storage.getDictionariesNames().toString();
-		Dictionary dictionary = storage.getDictionary("Dict1");
-		List<String> recordIds = dictionary.getAllRecordsIds();
-		ArrayList<VocabloryRecord> records = new ArrayList<VocabloryRecord>();
+		Dictionary dictionary = storage.getDictionary(aVocName);
+		List<String> allRecordsIds = dictionary.getAllRecordsIds();
+		List<VocabloryRecord> allRecords = new ArrayList<VocabloryRecord>();
 
-		Record record = dictionary.getRecord(recordIds.get(1));
+		for (String recId : allRecordsIds) {
+			Record record = dictionary.getRecord(recId);
+			VocabloryRecord vocabloryRecord = new VocabloryRecord();
+			vocabloryRecord.setID(record.getId());
+			vocabloryRecord.setContent(Long.parseLong((String) record
+					.getAttributes().get(RecordAttr.CONTENT)));
+			allRecords.add(vocabloryRecord);
+		}
 
-		VocabloryRecord vocabloryRecord = new VocabloryRecord();
-		vocabloryRecord.setContent(111);
-		records.add(vocabloryRecord);
-		vocabloryRecord = new VocabloryRecord();
-		vocabloryRecord.setContent(222);
-		records.add(vocabloryRecord);
+		Collections.sort(allRecords, new Comparator<VocabloryRecord>() {
+			@Override
+			public int compare(VocabloryRecord record1, VocabloryRecord record2) {
+				Long conten1 = record1.getContent();
+				Long conten2 = record2.getContent();
+				return conten1.compareTo(conten2);
+			}
+		});
 
-		return records;
+		int i;
+		for (i = 0; i < allRecords.size(); i++) {
+			VocabloryRecord vocabloryRecord = allRecords.get(i);
+			Long recContent = vocabloryRecord.getContent();
+			if (recContent > aLessThan)
+				break;
+		}
+
+		return allRecords.subList(0, i);
 	}
 }
